--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
             </h1>
         </main>
         <img src="./Imagenes/ninja imagen.jpeg" alt="Imagen de ninja" />
-            <h4>
-                noun
-            </h4>
+            <p><em>noun</em></p>
         </section>
         <ol>
             <li>
