--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <h1>
                 ninja
             </h1>
-        </main>
         <img src="./Imagenes/ninja imagen.jpeg" alt="Imagen de ninja" />
-            <p><em>noun</em></p>
+            <p><em>noun</em>
+            </p>
         </section>
         <ol>
             <li>
